# flake-templates

./: .envrc  flake.nix
ai_docs/: README.md
ai_docs/nix/: nixos-templates-readme.md
spec/rust/mcp-server/: boilerplate.md
templates/rust/fenix/: .gitignore  .gutctags  flake.nix
templates/rust/mcp-server/: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
templates/rust/mcp-server/ai_docs/: README.md
templates/rust/mcp-server/ai_docs/rust-sdk/: README.md  counter-example.md  counter-sse-example.md  server-examples.md
templates/rust/mcp-server/src/: main.rs  tools.rs
