[package]
name = "mcp-server"
version = "0.1.0"
edition = "2024"
description = "A Model Context Protocol (MCP) SSE server template"
license = "MIT"

[dependencies]
rmcp = { version = "0.6.4", features = [
    "server",
    "macros", 
    "transport-sse-server",
    "schemars",
] }
tokio = { version = "1", features = [
    "macros",
    "rt", 
    "rt-multi-thread",
    "io-std",
    "signal",
    "fs",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std", 
    "fmt",
] }
axum = { version = "0.8", features = ["macros"] }
tokio-util = "0.7"
schemars = "1.0"